--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fraunces:ital,wght@0,700;0,900;1,700;1,900&display=swap');
 $yellow: hsl(51, 100%, 49%);
 $white:hsl(0, 0%, 100%);
+$grey-blue: hsl(210, 4%, 67%);
+$gd-text: hsl(167, 40%, 24%);
+$footer-txt: hsl(168, 34%, 41%);
+$photography-text: hsl(198, 62%, 26%);
 $body-text:  hsl(212, 27%, 19%);
 
 $body-font: 'Barlow', sans-serif;
@@ -67,30 +71,77 @@ body{
         section.intro{
             background-image: url('../images/desktop/image-header.jpg');
             height: max-content;
-            min-height: 100vh;
+            min-height: 80vh;
             background-size: cover;
             text-align: center;
             display: flex;
+            flex-direction: column;
             margin: auto;
             justify-content: center;
+            align-content: space-between;
             h1{
                 color: $white;
+                align-self: center;
+                font-family: $header-font;
+                font-size: 3rem;
+                align-self: center;
+            }
+            img{
+                height: 7rem;
+                width: 2rem;
+                margin: 3rem;
                 align-self: center;
             }
         }
         section.img-grid{
             display: grid;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: repeat(6, 1fr);
+            grid-template-rows: 400px 400px 400px;
+            grid-template-areas: 
+                "transform transform"
+                "audience audience"
+                "gd photography";
+            justify-items: center;
             .item{
-
+                h3{
+                    font-family: $header-font;
+                    font-size: 2rem;
+                    color: black;
+                }
+                p{
+                    font-family: $body-font;
+                    color: $gd-text;
+                }
+                .img1{
+                    background-image: url('/images/desktop/image-transform.jpg');
+                    background-size: cover;
+                    color: hsl(198, 62%, 26%);
+                }
+                .transform{
+                    grid-area: transform;
+                    display: grid;
+                }
+                .audience{
+                    grid-area: audience;
+                }
+                .img3{
+                    background-image: url('/images/desktop/image-graphic-design.jpg');
+                    background-size: cover;
+                    grid-area: gd;
+                }
+                .img4{
+                    background-image: url('/images/desktop/image-photography.jpg');
+                    background-size: cover;
+                    grid-area: photography;
+                }
             }
         }
         section.testimonials{
             width: 100%;
-            h4{
+            h4.testimonial-title{
                 text-align: center;
                 font-family: $header-font;
+                color: $grey-blue;
             }
             .client-list{
                 display: grid;
@@ -111,9 +162,45 @@ body{
                     }
                     h6{
                         font-family: $body-font;
+                        color: $grey-blue;
                     }
                 }
             }
+        }
+    }
+    footer{
+        width: 100%;
+        background-color: hsl(210, 4%, 67%);
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        .footer-images{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            img{
+                max-width: 25vw;
+            }
+        }
+        .footer-nav{
+            display: flex;
+            flex-direction: row;
+            justify-items: center;
+            list-style: none;
+            font-family: $body-font;
+            li{
+                text-align: center;
+                text-decoration: none;
+                a{
+                    text-decoration: none;
+                    color: $footer-txt;
+                }
+            }
+        }
+        .social-icons{
+            display: flex;
+            flex-direction: row;
+            list-style: none;
+            justify-items: center;
         }
     }
 }
