--- a/style/style.scss
+++ b/style/style.scss
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fraunces:ital,wght@0,700;0,900;1,700;1,900&display=swap');
 $yellow: hsl(51, 100%, 49%);
+$red: hsl(7, 99%, 70%);
 $white:hsl(0, 0%, 100%);
 $grey-blue: hsl(210, 4%, 67%);
+$dark-grey-blue: hsl(232, 10%, 55%);
+$darker-grey: hsl(213, 9%, 39%);
 $gd-text: hsl(167, 40%, 24%);
 $footer-txt: hsl(168, 34%, 41%);
 $photography-text: hsl(198, 62%, 26%);
 $body-text:  hsl(212, 27%, 19%);
+
 
 $body-font: 'Barlow', sans-serif;
 $header-font: 'Fraunces', serif;
@@ -20,6 +24,7 @@ body{
     width: 100vw;
     font-size: 18px;
     position: relative;
+    color: $body-text;
     header{
         position: fixed;
         display: flex;
@@ -103,36 +108,52 @@ body{
                 "audience audience"
                 "gd photography";
             justify-items: center;
+            
             .item{
                 .text-square{
                     width: 50vw;
+                    align-self: center;
                     text-align: center;
                     h3{
                         font-family: $header-font;
                         font-size: 2rem;
                         color: black;
+                        margin: auto;
                     }
                     p{
                         font-family: $body-font;
                         color: $gd-text;
+                        margin: auto;
+                        width: 28rem;
+                        text-align: left;
                     }
                 }
-                // .img1{
-                //     background-image: url('/images/desktop/image-transform.jpg');
-                //     background-size: cover;
-                //     color: hsl(198, 62%, 26%);
-                // }
+                .img-square{
+                    align-self: center;
+                    .transform-img{
+                        background-size: cover;
+                        color: hsl(198, 62%, 26%);
+                        align-self: center;
+                    }
+                    .stand-out-img{
+                        background-size: cover;
+                        color: hsl(198, 62%, 26%);
+                        align-self: center;
+                    }
+                }
             }
             .transform{
                 grid-area: transform;
                 display: flex;
                 width: 100%;
+                overflow: hidden;
             }
             .audience{
                 grid-area: audience;
                 display: flex;
                 flex-direction: row-reverse;
                 width: 100%;
+                overflow: hidden;
             }
             .img3{
                 background-image: url('/images/desktop/image-graphic-design.jpg');
@@ -152,25 +173,32 @@ body{
         section.testimonials{
             width: 100%;
             min-height: 80vh;
-            align-content: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             h4.testimonial-title{
                 text-align: center;
                 font-family: $header-font;
                 color: $grey-blue;
+                margin: auto auto 2rem auto;
             }
             .client-list{
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
+                margin: 0 auto auto auto;
+                justify-content: center;
                 .client{
                     text-align: center;
                     max-width: 22rem;
                     margin: auto;
                     img.client-profile{
                         border-radius: 50%;
-                        size: 2rem;
+                        width: 5rem;
+                        margin: 2rem;
                     }
                     p{
                         font-family: $body-font;
+                        margin: 1rem;
                     }
                     h4{
                         font-family: $header-font;
@@ -186,7 +214,7 @@ body{
     footer{
         width: 100%;
         height: 75vh;
-        background-color: hsl(210, 4%, 67%);
+        background-color: $grey-blue;
         text-align: center;
         display: flex;
         flex-direction: column;
@@ -198,16 +226,25 @@ body{
                 max-width: 25vw;
             }
         }
+        .logo-footer{
+            margin-top: 4rem;
+            color: $footer-txt;
+            img{
+                height: 2rem;
+                color-fill: $footer-txt;
+            }
+        }
         .footer-nav{
             display: flex;
             flex-direction: row;
-            justify-items: center;
-            margin: auto;
+            justify-content: center;
             list-style: none;
             font-family: $body-font;
+            color: $footer-txt;
             li{
                 text-align: center;
                 text-decoration: none;
+                margin: 2rem;
                 a{
                     text-decoration: none;
                     color: $footer-txt;
@@ -217,9 +254,11 @@ body{
         .social-icons{
             display: flex;
             flex-direction: row;
-            margin: auto;
             list-style: none;
-            justify-items: center;
+            justify-content: center;
+            li{
+                margin: 1rem;
+            }
         }
     }
 }
