--- a/style/style.scss
+++ b/style/style.scss
@@ -44,7 +44,10 @@ body{
         nav{
             display: flex;
             flex-direction: row;
-            ul{
+            .burger{
+                display: none;
+            }
+            .menu{
                 display: flex;
                 flex-direction: row;
                 list-style-type: none;
@@ -102,7 +105,7 @@ body{
         section.img-grid{
             display: grid;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 500px 500px 500px;
+            grid-template-rows: 550px 550px 550px;
             grid-template-areas: 
                 "transform transform"
                 "audience audience"
@@ -113,23 +116,29 @@ body{
                 .text-square{
                     width: 50vw;
                     align-self: center;
-                    text-align: center;
+                    text-align: left;
                     h3{
                         font-family: $header-font;
-                        font-size: 2rem;
+                        font-size: 2.5rem;
                         color: black;
                         margin: auto;
+                        width: 28rem;
                     }
                     p{
                         font-family: $body-font;
-                        color: $gd-text;
-                        margin: auto;
+                        color: $grey-blue;
+                        margin: 2rem auto;
                         width: 28rem;
                         text-align: left;
+                    }
+                    a{
+                        width: 29rem;
                     }
                 }
                 .img-square{
                     align-self: center;
+                    width: 50vw;
+                    overflow: hidden;
                     .transform-img{
                         background-size: cover;
                         color: hsl(198, 62%, 26%);
@@ -139,6 +148,9 @@ body{
                         background-size: cover;
                         color: hsl(198, 62%, 26%);
                         align-self: center;
+                        img{
+                            zoom: 110%;
+                        }
                     }
                 }
             }
@@ -213,7 +225,6 @@ body{
     }
     footer{
         width: 100%;
-        height: 75vh;
         background-color: $grey-blue;
         text-align: center;
         display: flex;
@@ -231,7 +242,6 @@ body{
             color: $footer-txt;
             img{
                 height: 2rem;
-                color-fill: $footer-txt;
             }
         }
         .footer-nav{
@@ -258,6 +268,55 @@ body{
             justify-content: center;
             li{
                 margin: 1rem;
+            }
+        }
+    }
+}
+
+// **** MOBILE MEDIA QUERY ****
+
+@media only screen 
+    and (min-width: 300px) 
+    and (max-width: 425px)
+    and (-webkit-min-device-pixel-ratio: 2) {
+
+    body{
+        header{
+            nav{
+                .burger{
+                    display: block;
+                }
+                .menu{
+                    display: none;
+                    flex-direction: column;
+                }
+            }
+        }
+        article{
+            width: 100vw;
+            section.intro{
+                width: 100%;
+            }
+            section.img-grid{
+                width: 100%;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1100px 1100px 550px 550px;
+                grid-template-areas:
+                    "transform"
+                    "audience"
+                    "gd"
+                    "photography";
+                .transform{
+                    flex-direction: column;
+                }
+                .audience{
+                    flex-direction: column;
+                }
+            }
+            section.testimonials{
+                .client-list{
+                    grid-template-columns: 1fr;
+                }
             }
         }
     }
