--- a/style/style.css
+++ b/style/style.css
@@ -199,26 +199,18 @@ body article section.img-grid .item .img-square {
       align-self: center;
   width: 50vw;
   overflow: hidden;
+  color: #458c7e;
+  align-self: center;
 }
 
-body article section.img-grid .item .img-square .transform-img {
+body article section.img-grid .item .transform-img {
   background-size: cover;
-  color: #19536b;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  background-image: url("../images/desktop/image-transform.jpg");
 }
 
-body article section.img-grid .item .img-square .stand-out-img {
+body article section.img-grid .item .stand-out-img {
+  background-image: url("../images/desktop/image-stand-out.jpg");
   background-size: cover;
-  color: #19536b;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-}
-
-body article section.img-grid .item .img-square .stand-out-img img {
-  zoom: 110%;
 }
 
 body article section.img-grid .transform {
@@ -251,7 +243,7 @@ body article section.img-grid .audience {
 
 body article section.img-grid .img3 {
   width: 100%;
-  background-image: url("/images/desktop/image-graphic-design.jpg");
+  background-image: url("../images/desktop/image-graphic-design.jpg");
   background-size: cover;
   background-position: top;
   -ms-grid-row: 3;
@@ -274,14 +266,15 @@ body article section.img-grid .img3 {
 }
 
 body article section.img-grid .img3 p {
-  line-height: 1.5rem;
+  line-height: 2rem;
   font-family: "Barlow", sans-serif;
   max-width: 23rem;
+  margin: 2rem auto;
 }
 
 body article section.img-grid .img4 {
   width: 100%;
-  background-image: url("/images/desktop/image-photography.jpg");
+  background-image: url("../images/desktop/image-photography.jpg");
   background-size: cover;
   background-position: top;
   -ms-grid-row: 3;
@@ -305,8 +298,9 @@ body article section.img-grid .img4 {
 
 body article section.img-grid .img4 p {
   font-family: "Barlow", sans-serif;
-  line-height: 1.5rem;
+  line-height: 2rem;
   max-width: 23rem;
+  margin: 2rem auto;
 }
 
 body article section.testimonials {
@@ -511,23 +505,54 @@ body footer .social-icons li {
   }
   body article section.img-grid .item .img-square {
     width: 100%;
-    height: 50%;
-    margin: auto;
+    height: 40%;
+    margin: 0;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
   }
+  body article section.img-grid .item .transform-img {
+    background-image: url("../images/mobile/image-transform.jpg");
+    background-position: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  body article section.img-grid .item .stand-out-img {
+    background-image: url("../images/mobile/image-stand-out.jpg");
+    background-position: center;
+  }
   body article section.img-grid .transform {
+    height: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
   body article section.img-grid .audience {
+    height: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  body article section.img-grid .img3 {
+    background-size: auto;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+  }
+  body article section.img-grid .img3 p {
+    margin: 3rem auto;
+  }
+  body article section.img-grid .img4 {
+    background-size: auto;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+  }
+  body article section.img-grid .img4 p {
+    margin: 3rem auto;
   }
   body article section.testimonials {
     margin: 5rem auto;
