--- a/style/style.scss
+++ b/style/style.scss
@@ -147,19 +147,16 @@ body{
                     align-self: center;
                     width: 50vw;
                     overflow: hidden;
-                    .transform-img{
-                        background-size: cover;
-                        color: hsl(198, 62%, 26%);
-                        align-self: center;
-                    }
-                    .stand-out-img{
-                        background-size: cover;
-                        color: hsl(198, 62%, 26%);
-                        align-self: center;
-                        img{
-                            zoom: 110%;
-                        }
-                    }
+                    color: $footer-txt;
+                    align-self: center;
+                }
+                .transform-img{
+                    background-size: cover;
+                    background-image: url('../images/desktop/image-transform.jpg');
+                }
+                .stand-out-img{
+                    background-image: url('../images/desktop/image-stand-out.jpg');
+                    background-size: cover;
                 }
             }
             .transform{
@@ -177,7 +174,7 @@ body{
             }
             .img3{
                 width: 100%;
-                background-image: url('/images/desktop/image-graphic-design.jpg');
+                background-image: url('../images/desktop/image-graphic-design.jpg');
                 background-size: cover;
                 background-position: top;
                 grid-area: gd;
@@ -187,14 +184,15 @@ body{
                 justify-content: end;
                 align-items: center;
                 p{
-                    line-height: 1.5rem;
+                    line-height: 2rem;
                     font-family: $body-font;
                     max-width: 23rem;
+                    margin: 2rem auto;
                 }
             }
             .img4{
                 width: 100%;
-                background-image: url('/images/desktop/image-photography.jpg');
+                background-image: url('../images/desktop/image-photography.jpg');
                 background-size: cover;
                 background-position: top;
                 grid-area: photography;
@@ -205,8 +203,9 @@ body{
                 align-items: center;
                 p{
                     font-family: $body-font;
-                    line-height: 1.5rem;
+                    line-height: 2rem;
                     max-width: 23rem;
+                    margin: 2rem auto;
                 }
             }
         }
@@ -365,16 +364,41 @@ body{
                     }
                     .img-square{
                         width: 100%;
-                        height: 50%;
-                        margin: auto;
+                        height: 40%;
+                        margin: 0;
                         justify-content: center;
+                    }
+                    .transform-img{
+                        background-image: url('../images/mobile/image-transform.jpg');
+                        background-position: center;
+                        align-items: center;
+                    }
+                    .stand-out-img{
+                        background-image: url('../images/mobile/image-stand-out.jpg');
+                        background-position: center;
                     }
                 }
                 .transform{
+                    height: 100%;
                     flex-direction: column;
                 }
                 .audience{
+                    height: 100%;
                     flex-direction: column;
+                }
+                .img3{
+                    background-size: auto;
+                    justify-content: end;
+                    p{
+                        margin: 3rem auto;
+                    }
+                }
+                .img4{
+                    background-size: auto;
+                    justify-content: end;
+                    p{
+                        margin: 3rem auto;
+                    }
                 }
             }
             section.testimonials{
